A one-word change that fixes the header being too tall at certain widths. (For Kathy.)
BUG=

Review URL: https://codereview.appspot.com/248680043

--- a/src/site/css/dart-style.css
+++ b/src/site/css/dart-style.css
@@ -409,7 +409,7 @@ i.sprite-icon-download-btn {
 }
 
 @media (max-width: 1000px) {
-  .navbar-search {
+  .navbar-right {
     display: none;
   }
 }
